# telemify

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release-please.yaml
telemify/: settings.py
telemify/logging/: configure.py  filters.py  middleware.py  processors.py
telemify/metrics/: configure.py  metrics.py  middleware.py
telemify/tracing/: configure.py
